解决反射 newInstance() 方法被废弃的问题